update for v1.6