@@ -1,42 +1,43 @@
 package net.daddel.novaBank.tabcompleter;
 
-import net.daddel.novaBank.util.Utilities;
+import net.daddel.novaBank.files.ConfigFile;
 import org.bukkit.command.Command;
 import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
-import org.bukkit.entity.Player;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class BankTabCompleter implements TabCompleter {
-    private final Utilities utilities;
-    public BankTabCompleter(Utilities utilities) {
-        this.utilities = utilities;
-    }
 
-    private static final List<String> SUBCOMMANDS = Arrays.asList("balance", "deposit", "withdraw");
+    private final ConfigFile configFile;
+
+    private static final List<String> SUBCOMMANDS = List.of("balance", "deposit", "withdraw");
+
+    public BankTabCompleter(ConfigFile configFile) {
+        this.configFile = configFile;
+    }
 
     @Override
     public List<String> onTabComplete(CommandSender sender, Command command, String label, String[] args) {
 
-        Player player = (Player) sender;
-
-        if (!utilities.isAdmin(player)) {
-            return List.of();
+        if (args.length == 1) {
+            String input = args[0].toLowerCase();
+            return SUBCOMMANDS.stream().filter(sub -> sub.startsWith(input)).collect(Collectors.toList());
         }
 
-        if (args.length == 1) {
-            List<String> result = new ArrayList<>();
-            String input = args[0].toLowerCase();
+        if (args.length == 2) {
+            String subCommand = args[0].toLowerCase();
+            List<String> suggestions = switch (subCommand) {
+                case "deposit" -> configFile.getStringList("suggestions.deposit");
+                case "withdraw" -> configFile.getStringList("suggestions.withdraw");
+                default -> List.of();
+            };
 
-            for (String sub : SUBCOMMANDS) {
-                if (sub.startsWith(input)) {
-                    result.add(sub);
-                }
-            }
-            return result;
+            String input = args[1].toLowerCase();
+            return suggestions.stream()
+                    .filter(s -> s.toLowerCase().startsWith(input))
+                    .collect(Collectors.toList());
         }
 
         return List.of();
